[tool.poetry]
name = "time-frequency-analysis"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "3.9.7"
streamlit = "^1.2.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
plotly = "^5.3.1"
sparse = "^0.13.0"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
